refactor professorResearchGroupRequest to ResearchGroupRequest
