# openapi/openapi.yaml
@@ -999,7 +999,7 @@ paths:
       requestBody:
         content:
           application/json:
-            schema: {$ref: '#/components/schemas/ProfessorResearchGroupRequestDTO'}
+            schema: {$ref: '#/components/schemas/ResearchGroupRequestDTO'}
         required: true
       responses:
         '200':
@@ -1089,7 +1089,7 @@ paths:
       requestBody:
         content:
           application/json:
-            schema: {$ref: '#/components/schemas/ProfessorResearchGroupRequestDTO'}
+            schema: {$ref: '#/components/schemas/ResearchGroupRequestDTO'}
         required: true
       responses:
         '200':
@@ -1843,24 +1843,6 @@ components:
         lastName: {type: string}
         researchGroupName: {type: string}
         researchGroupWebsite: {type: string}
-    ProfessorResearchGroupRequestDTO:
-      type: object
-      properties:
-        abbreviation: {type: string}
-        city: {type: string}
-        contactEmail: {type: string}
-        defaultFieldOfStudies: {type: string}
-        description: {type: string}
-        firstName: {type: string}
-        lastName: {type: string}
-        postalCode: {type: string}
-        researchGroupHead: {type: string}
-        researchGroupName: {type: string}
-        school: {type: string}
-        street: {type: string}
-        title: {type: string}
-        universityId: {type: string}
-        website: {type: string}
     RatingDTO:
       type: object
       properties:
@@ -1950,6 +1932,24 @@ components:
         researchGroupId: {type: string, format: uuid}
         universityId: {type: string, maxLength: 7, minLength: 3}
       required: [universityId]
+    ResearchGroupRequestDTO:
+      type: object
+      properties:
+        abbreviation: {type: string}
+        city: {type: string}
+        contactEmail: {type: string}
+        defaultFieldOfStudies: {type: string}
+        description: {type: string}
+        firstName: {type: string}
+        lastName: {type: string}
+        postalCode: {type: string}
+        researchGroupHead: {type: string}
+        researchGroupName: {type: string}
+        school: {type: string}
+        street: {type: string}
+        title: {type: string}
+        universityId: {type: string}
+        website: {type: string}
     ResearchGroupShortDTO:
       type: object
       properties:
